Fix up definition of k-prefix

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -79,11 +79,11 @@ ${\Labels = (q_1, \dots, q_K) \in \{0, 1\}^K}$~gives
 the label predictions associated with~$\Prefix$,
 and we call ${\Default \in \{0, 1\}}$ the default label prediction.
 
-For an antecedent list ${\Prefix = (p_1, \dots, p_k, \dots, p_K)}$,
-we define the list of~$\Prefix$'s first~$k$ antecedents,
-${\Prefix^k = (p_1, \dots, p_k)}$, to be~$\Prefix$'s $k$-prefix.
+Let ${\Prefix = (p_1, \dots, p_k, \dots, p_K)}$ be an antecedent list,
+then for any~${k \le K}$, we define ${\Prefix^k = (p_1, \dots, p_k)}$
+to be the $k$-prefix of~$\Prefix$.
 %
-For any $k$-prefix~$\Prefix^k$,
+For any such $k$-prefix~$\Prefix^k$,
 we say that~$\Prefix$ starts with~$\Prefix^k$.
 %
 For any given space of rule lists,
